Change base type to serif and fix post title spacing

--- a/_assets/stylesheets/partials/_base.scss
+++ b/_assets/stylesheets/partials/_base.scss
@@ -16,7 +16,7 @@
 
 html {
   color: $gray;
-  font: #{$base-font-size}/#{$baseline-size} $font-sans;
+  font: #{$base-font-size}/#{$baseline-size} $font-serif;
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: none;
   text-rendering: optimizeLegibility;
